# This patch mostly contains new textures and some minor bug fixes! And we have the first piece of ambience courtesy of the talented @Quizzly_ !


# New features in 1.1.2a/1.2.0a
* Added new ambience in the Shelfhollows.

> Title 1
* Desc 1

# Changes to existing features:

* Tweaked Arcane Cores to appear rarely as loot in common Vaults.

* Updated the Rugosa Coral blockset textures.

* Updated the Tabulata Coral blockset textures.

* Updated the Sagaria texture.

* Updated the Fungi Vines texture(s).

* Updated the credits!


# Bugs fixed:

* Fixed the Arcane Core not having a display name.


## **Updates in 1.1.1a


## This patch contains a lot of changes to the Shelfhollows thanks to feedback we've received, as well as a few more additions!

# New features in 1.1.1a

* Added Orange/Pink/Purple Fungi Vines. THey are currently not obtainable, and just serve as decoration to the Shelfhollow ceiling!

* Added Shelf Mold Moss.

* Added a new falling leaf particle to Ancient Leaves.


# Changes to existing features:

* Completely overhauled the Fungal Parents model and texture.

* Changed the Shelfhollow's fog color from pitch black to beige.

* Adjusted the Purple Mushroom Block's bounciness from x2 to x1.2 times.

* Adjusted the Shelfhollow's particle textures.

* Adjusted the frequency of Shelfhollow particles that appear.

* Adjusted how many (Fungal) Parents spawn.

* Adjusted the Orange/Pink/Purple blocksets textures.


# Technical additions or changes:

* Added "mold_replaceable" tag.



# Bugs fixed:

* Fixed Fungal Parents not having a display name.

* Fixed Shelf Mold dropping Short Grass.



# **Updates in 1.1.0a**


## The first update of the new year is here!! We're introducing a brand new, fungal biome -- The Shelfhollows!
You will find them generating alongside the Undergrove biome!

# New features in 1.1.0a:
* Added the Shelfhollow biome.
* Added the Orange/Pink/Purple Mushroom Blocks.
* Added the Orange/Pink/Purple Fungal Brickset.